# boboloo-backend

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  emqx-ca.pem  generate_qr.py  load_test.py  requirements.txt  simulate_toys.py  test_mqtt.py  test_openai.py  test_vq_pipeline.py
alembic/: env.py
alembic/versions/: 0f053932c30c_add_birth_date_column.py  1f980c2333d9_initial_tables.py  2827c0dea436_initial_schema.py  5b3bf1016f9c_add_child_vocabulary_memory.py  a3c9f1d72e44_remove_fake_analytics_columns.py  b4e9f1a2c7d3_add_apikey_created_at.py  (+4 more)
app/: main.py
dev/: e2e_test.py  esp32_hardware_validation.md  multi_toy_runner.py  provision_toy.py  queue_inspector.py  test_backend.py  test_failure_scenarios.py  test_ota_flow.py  toy_simulator.py
docs/: api_key_lifecycle.md  backend_engineer_guide.md  boboloo_complete_reference.md  deployment_readiness_report.md  firmware_engineer_guide.md  founder_executive_summary.md  manufacturer-readiness-checklist.md  manufacturer_guide.md  mqtt-integration-contract.md  provisioning-api-contract.md  team-meeting-guide.md
factory/: env.factory.template  factory_provision.py  failure-runbook.md  quick-start.md
firmware/: partitions.csv
firmware/main/: CMakeLists.txt  ble_provisioning.c  ble_provisioning.h  led_control.c  led_control.h  main.c  mqtt_client.c  mqtt_client.h  nvs_storage.c  nvs_storage.h  ota_update.c  ota_update.h  ota_validation.c  ota_validation.h  provisioning_state.h  reset_button.c  reset_button.h  wifi_connect.c  wifi_connect.h
(+57 files in other folders)
